2008-Sep-01  yselkowitz

	* bin/make_desktop_entry: Update to 1.0 spec; allow additional args.

	* lib/Makefile.am:
	lib/rox.cygclass: NEW cygclass for ROX desktop packages.

	* lib/svn.cygclass: Fix SVN_MODULE where SVN_URI ends with SVN_BRANCH.

	* lib/distutils.cygclass: Simplify ORIG_PN definition.

	* lib/lua.cygclass: Remove support for obsolete 5.0.

	* lib/gnome.org.cygclass: Remove obsolete CVS_URI.

	* bin/cygport.in:
	lib/*.cygclass:
	readonly-protect functions; remove obsolete aliases.

	* bin/cygport.in: No need for _name variable.

	* bin/cygport.in (__check_function_ro): New function.

2008-Aug-31  yselkowitz

	* bin/cygport.in (__prepinstalldirs):
	libtool-2.2 does not relink during install on Cygwin.

	* lib/kde3.cygclass: Add KDevelop 3.5.3; remove obsolete versions.

	* bin/cygport.in (__srpm_extract): New function.
	(unpack): Call it for *.src.rpm sources.

	* bin/cygport.in:
	lib/berkdb.cygclass (berkdb_autoreconf):
	lib/cross.cygclass (cross_config_sub):
	lib/gnome2.cygclass (gnome2_autoreconf):
	lib/kde3.cygclass (kde3_autoreconf): Remove libtool 1.5 support.

	* bin/prep_libtool_modules.sh: Speed up libtool version detection.

	* lib/pygtk.cygclass: Remove deprecated packages.

	* bin/cygport.in: Tweak argument parser catch-all.

2008-Aug-29  yselkowitz

	* bin/cygport.in:
	bin/prep_libtool_modules.sh:
	lib/aspell-dict.cygclass:
	lib/ebook.cygclass:
	lib/qt3-qmake.cygclass:
	lib/qt4-qmake.cygclass:
	Clean up a number of old FIXMEs.

	* lib/gnome2.cygclass: No need to override localstatedir with rarian.

2008-Aug-28  yselkowitz

	* lib/ruby-gnome2.cygclass (ruby_gnome2_compile, ruby_gnome2_install):
	Enable rdoc generation, using ri docs, not HTML.

	* lib/ruby.cygclass (RI_SITEDIR): Define.
	(ruby_compile, ruby_install) [RDOC_SOURCE]: Build ri docs, not HTML.

	* bin/cygport.in (__oldpatch): Remove long-deprecated function.

	* bin/cygport.in: Allow autotools.cygclass to be manually re-inherit()ed.